# master_eval_learning

./: .env.example  .gitignore  README.md  dataset.py  metrics.py  pyproject.toml
deepEval_1/: README.md  pipeline.py
llm_judge_rag/: README.md  hr_documents.py  openrouter_judge.py  rag_engine.py  test_hr_chatbot.py
llm_judge_rag/.deepeval/: .deepeval_telemetry.txt
ragas/: ragas_eval.py  ragas_judge.py
